# wayland-feather-shot

./: CHANGELOG.md  ISSUES.md  LICENSE  README.ja.md  README.md  install.sh  pyproject.toml  uninstall.sh
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
data/: io.github.hjosugi.WaylandFeatherShot.Daemon.desktop  io.github.hjosugi.WaylandFeatherShot.desktop  io.github.hjosugi.WaylandFeatherShot.metainfo.xml  wayland-feather-shot-daemon.desktop  wayland-feather-shot.desktop
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  SECURITY.ja.md  SECURITY.md
packaging/: README.ja.md  README.md
packaging/appimage/: AppRun
packaging/aur/: PKGBUILD
packaging/flatpak/: io.github.hjosugi.WaylandFeatherShot.yaml
po/: README.ja.md  README.md  ja.po  wayland-feather-shot.pot
scripts/: build-release-assets.sh  gen-po.py  publish-aur.sh  setup-hotkey.sh
src/wayland_feather_shot/: __init__.py  app.py  cli.py  clipboard_holder.py  diagnostics.py  gifcap.py  gifenc.py  history.py  hotkey.py  i18n.py  imaging.py  paths.py  (+8 more)
tests/: test_autoscroll.py  test_cli.py  test_clipboard_holder.py  test_gifenc.py  test_history.py  test_hotkey.py  test_i18n.py  test_launcher.py  test_paths.py  test_recognize.py  test_save.py  test_settings.py  test_stitcher.py  test_updater.py
wayland-feather-shot(1)/wayland-feather-shot/: .gitignore  ISSUES.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
wayland-feather-shot(1)/wayland-feather-shot/.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
wayland-feather-shot(1)/wayland-feather-shot/docs/: ARCHITECTURE.md  SECURITY.md
wayland-feather-shot(1)/wayland-feather-shot/packaging/: io.github.hirosugi41.WaylandFeatherShot.Daemon.desktop  io.github.hirosugi41.WaylandFeatherShot.desktop
wayland-feather-shot(1)/wayland-feather-shot/src/wayland_feather_shot/: __init__.py  __main__.py  diagnostics.py  image_ops.py  paths.py
wayland-feather-shot(1)/wayland-feather-shot/src/wayland_feather_shot/capture/: __init__.py  portal.py
wayland-feather-shot(1)/wayland-feather-shot/src/wayland_feather_shot/editor/: __init__.py  window.py
wayland-feather-shot(1)/wayland-feather-shot/src/wayland_feather_shot/scrollcap/: __init__.py  session.py  stitcher.py
wayland-feather-shot(1)/wayland-feather-shot/src/wayland_feather_shot/shortcuts/: __init__.py  daemon.py
wayland-feather-shot(1)/wayland-feather-shot/tests/: test_image_ops.py  test_stitcher.py
(+9 files in other folders)
