[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wayland-feather-shot"
version = "0.2.0"
description = "Flameshot-style, local-only screenshot tool for Linux Wayland: portal capture, in-place annotation, scrolling capture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wayland-feather-shot contributors" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
# GTK 4 itself and the GStreamer/PipeWire pipeline come from the distro
# (see README "Install"); these are the pip-visible bindings only.
dependencies = [
  "PyGObject>=3.46",
  "pycairo>=1.24",
]

[project.optional-dependencies]
fast = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/hjosugi/wayland-feather-shot"
Issues = "https://github.com/hjosugi/wayland-feather-shot/issues"

[project.scripts]
wayland-feather-shot = "wayland_feather_shot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
