[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wayland-feather-shot"
version = "0.1.0"
description = "Local-only Flameshot-like screenshot editor for Linux Wayland"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "wayland-feather-shot contributors" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = [
  "Pillow>=10.0",
]

[project.optional-dependencies]
fast = ["numpy>=1.24"]

[project.scripts]
wayland-feather-shot = "wayland_feather_shot.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
